--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,19 @@
 {
     "name": "ui-awesome/html-attribute",
     "type": "library",
-    "description": "UI Awesome HTML Attribute Code Generator for PHP.",
+    "description": "UI Awesome HTML Attribute for PHP.",
     "keywords": [
         "ui-awesome",
         "html-attribute",
-        "code-generator",
         "php"
     ],
     "license": "mit",
     "require": {
         "php": "^8.1",
-        "ui-awesome/html-helper":"^0.5"
+        "ui-awesome/html-helper": "^0.5"
     },
     "require-dev": {
-        "infection/infection": "^0.27|^0.31",
+        "infection/infection": "^0.27|^0.32",
         "maglnet/composer-require-checker": "^4.1",
         "phpstan/extension-installer": "^1.4",
         "phpstan/phpstan": "^2.1",
